results/SVCOMP/specgen/log-uninitialised1-2024_03_03_22_17_19.txt
class Main {
  //@ ensures \result <==> (\forall int i; 0 <= i && i < 10; i[i] != 0);
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: array required, but int found
  //@ ensures \result <==> (\forall int i; 0 <= i && i < 10; i[i] != 0);
                                                             ^
1 error

class Main {
  //@ ensures \result <==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: array required, but int found
  //@ ensures \result <==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
                                                             ^
1 error

class Main {
  //@ ensures \result <==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: array required, but int found
  //@ ensures \result <==> (\forall int i; 0 <= i && i < 10; i[i] == 0);
                                                             ^
1 error

class Main {
  //@ ensures \result <==> (\forall int i; 0 <= i && i < 10; i == 0);
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
    return i[3] == 0;
    ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
  //@ ensures \result <==> (\forall int i; 0 <= i && i < 10; i == 0);
      ^
2 verification failures

class Main {
  //@ ensures \result <==> (\forall int i; 0 < i && i < 10; i == 0);  
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
    return i[3] == 0;
    ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
  //@ ensures \result <==> (\forall int i; 0 < i && i < 10; i == 0);  
      ^
2 verification failures

class Main {
  //@ ensures \result <==> (\forall int i; 0 < i && i <= 10; i == 0);  
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
    return i[3] == 0;
    ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
  //@ ensures \result <==> (\forall int i; 0 < i && i <= 10; i == 0);  
      ^
2 verification failures

class Main {
  //@ ensures \result <==> (\forall int i; 0 <= i && i < 10; i == 0);  
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
    return i[3] == 0;
    ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
  //@ ensures \result <==> (\forall int i; 0 <= i && i < 10; i == 0);  
      ^
2 verification failures

class Main {
  //@ ensures \result <==> (\forall int i; 0 <= i && i <= 10; i == 0);  
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
    return i[3] == 0;
    ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
  //@ ensures \result <==> (\forall int i; 0 <= i && i <= 10; i == 0);  
      ^
2 verification failures

class Main {
  //@ ensures \result <==> (\forall int i; 0 - 1 <= i && i < 10; i == 0);  
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
    return i[3] == 0;
    ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
  //@ ensures \result <==> (\forall int i; 0 - 1 <= i && i < 10; i == 0);  
      ^
2 verification failures

class Main {
  //@ ensures \result <==> (\forall int i; 0 - 1 <= i && i <= 10; i == 0);  
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
    return i[3] == 0;
    ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
  //@ ensures \result <==> (\forall int i; 0 - 1 <= i && i <= 10; i == 0);  
      ^
2 verification failures

class Main {
  //@ ensures \result <==> (\exists int i; 0 < i && i < 10; i == 0);  
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
    return i[3] == 0;
    ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
  //@ ensures \result <==> (\exists int i; 0 < i && i < 10; i == 0);  
      ^
2 verification failures

class Main {
  //@ ensures \result <==> (\exists int i; 0 < i && i <= 10; i == 0);  
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
    return i[3] == 0;
    ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
  //@ ensures \result <==> (\exists int i; 0 < i && i <= 10; i == 0);  
      ^
2 verification failures

class Main {
  //@ ensures \result <==> (\exists int i; 0 <= i && i < 10; i == 0);  
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
    return i[3] == 0;
    ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
  //@ ensures \result <==> (\exists int i; 0 <= i && i < 10; i == 0);  
      ^
2 verification failures

class Main {
  //@ ensures \result <==> (\exists int i; 0 <= i && i <= 10; i == 0);  
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
    return i[3] == 0;
    ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
  //@ ensures \result <==> (\exists int i; 0 <= i && i <= 10; i == 0);  
      ^
2 verification failures

class Main {
  //@ ensures \result <==> (\exists int i; 0 - 1 <= i && i < 10; i == 0);  
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
    return i[3] == 0;
    ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
  //@ ensures \result <==> (\exists int i; 0 - 1 <= i && i < 10; i == 0);  
      ^
2 verification failures

class Main {
  //@ ensures \result <==> (\exists int i; 0 - 1 <= i && i <= 10; i == 0);  
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}

/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
    return i[3] == 0;
    ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
  //@ ensures \result <==> (\exists int i; 0 - 1 <= i && i <= 10; i == 0);  
      ^
2 verification failures

class Main {
 
  public static boolean f() {
    int i[] = new int[10];
    return i[3] == 0;
  }
}


